# Midnight

./: .env.example  .gitignore  Cargo.toml  Dockerfile  Justfile  diesel.toml  docker-compose.example.yml  patterns.json
.github/workflows/: build.yml  deploy.yml
backend/: Cargo.toml
backend/src/: groups.rs  lib.rs  links.rs  mapfeed.rs  music.rs  sticky.rs  types.rs
backend/src/api/: cat.rs  mod.rs  osu.rs  safebooru.rs  types.rs
bot/: Cargo.toml
bot/src/: events.rs  main.rs  tasks.rs
bot/src/commands/: cat.rs  mapfeed.rs  mod.rs  moderation.rs  register.rs  sticky.rs  utility.rs  yuri.rs
common/: Cargo.toml
common/src/: context.rs  lib.rs  math.rs  sys.rs
database/: Cargo.toml
database/src/: core.rs  groups.rs  lib.rs  mapfeed.rs  models.rs  schema.rs  sticky.rs  subscriptions.rs
midnight/: Cargo.toml
midnight-api/: Cargo.toml
midnight-api/src/: fun.rs  lib.rs  osu.rs
midnight-database/: Cargo.toml
midnight-database/src/: core.rs  groups.rs  lib.rs  mapfeed.rs  sticky.rs  subscriptions.rs
midnight-model/: Cargo.toml
midnight-model/src/: cat.rs  database.rs  lib.rs  osu.rs  schema.rs
midnight-util/: Cargo.toml
midnight-util/src/: constants.rs
midnight/src/: config.rs  context.rs  events.rs  main.rs  tasks.rs
midnight/src/commands/: cat.rs  mapfeed.rs  mod.rs  moderation.rs  register.rs  sticky.rs  utility.rs  yuri.rs
midnight/src/features/: groups.rs  links.rs  mapfeed.rs  mod.rs  music.rs  sticky.rs
migrations/: V1__create_inital_tables.sql  V2__add_subscription_functions.sql  V3__update_subscription_table.sql
migrations/2025-01-07-155601_inital/: down.sql  up.sql
migrations/2025-01-09-151306_sticky_messages/: down.sql  up.sql
migrations/2025-01-11-172908_track_groups/: down.sql  up.sql
migrations/2025-02-14-135417_group_tracker_subscription/: down.sql  up.sql
