[workspace]
members = ["bot", "backend", "database", "common"]
resolver = "2"

[workspace.package]
version = "0.1.0"

[workspace.dependencies]
backend = { path = "backend/" }
common = { path = "common/" }
database = { path = "database/" }

chrono = { version = "0.4.0", features = ["serde"] }
refinery = { version = "0.8.9", features = ["tokio-postgres"] }
serde = { version = "1.0.0", features = ["derive"] }
tokio = { version = "1.37.0", features = ["rt-multi-thread", "signal"] }
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }

anyhow = "1.0.89"
deadpool-postgres = "0.14.0"
dotenv = "0.15.0"
env_logger = "0.11.3"
fancy-regex = "0.13.0"
futures = "0.3"
lazy_static = "1.4.0"
log = "0.4.21"
once_cell = "1.19.0"
poise = "0.6.1"
rand = "0.8.5"
reqwest = "0.12.4"
serde-xml-rs = "0.6.0"
serde_json = "1.0.0"
serenity = "0.12.2"
sysinfo = "0.31.4"
thiserror = "1.0.61"
tokio-postgres = "0.7.10"
tracing = "0.1.40"

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
unwrap_used = "deny"
style = "deny"
complexity = "deny"
perf = "deny"
suspicious = "deny"

[profile.release]
strip = true      # Automatically strip symbols from the binary.
lto = true        # Link-time optimization.
opt-level = 3     # Optimize for speed.
codegen-units = 1 # Maximum size reduction optimizations.
