[workspace]
members = ["bot", "backend", "database", "common"]
resolver = "2"

[workspace.package]
version = "0.1.0"

[workspace.dependencies]
backend = { path = "backend" }
common = { path = "common" }
database = { path = "database" }

chrono = { version = "0.4.0", features = ["serde"] }
diesel-async = { version = "0.5.2", features = ["postgres", "bb8", "async-connection-wrapper"] }
serde = { version = "1.0.0", features = ["derive"] }
tokio = { version = "1.37.0", features = ["rt-multi-thread", "signal", "time", "macros"] }
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }

anyhow = "1.0.89"
diesel = "2.2.6"
diesel_migrations = "2.2.0"
dotenv = "0.15.0"
fancy-regex = "0.13.0"
futures = "0.3"
itertools = "0.13.0"
lazy_static = "1.4.0"
log = "0.4.21"
once_cell = "1.19.0"
poise = "0.6.1"
pretty_assertions = "1.4.1"
rand = "0.8.5"
reqwest = "0.12.4"
serde-xml-rs = "0.6.0"
serde_json = "1.0.0"
serenity = "0.12.2"
smallvec = "1.13.2"
sysinfo = "0.31.4"
thiserror = "1.0.61"
tracing = "0.1.40"

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
unwrap_used = "deny"
style = "deny"
complexity = "deny"
perf = "deny"
suspicious = "deny"

[profile.release]
strip = true      # Automatically strip symbols from the binary.
lto = true        # Link-time optimization.
opt-level = 3     # Optimize for speed.
codegen-units = 1 # Maximum size reduction optimizations.
