cargo-features = ["profile-rustflags", "trim-paths"]

[workspace]
members = ["midnight", "midnight-api", "midnight-database", "midnight-model", "midnight-util"]
resolver = "2"

[workspace.package]
version = "0.1.0"

[workspace.dependencies]
midnight-api = { path = "midnight-api" }
midnight-database = { path = "midnight-database" }
midnight-model = { path = "midnight-model" }
midnight-util = { path = "midnight-util" }

chrono = { version = "0.4.0", features = ["serde"] }
diesel-async = { version = "0.5.2", features = ["postgres", "bb8", "async-connection-wrapper"] }
serde = { version = "1.0.0", features = ["derive"] }
smallvec = { version = "1.13.2", features = ["serde"] }
tokio = { version = "1.37.0", features = ["rt-multi-thread", "signal", "time", "macros"] }
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }

anyhow = "1.0.89"
diesel = "2.2.6"
diesel_migrations = "2.2.0"
dotenvy = "0.15.7"
fancy-regex = "0.14.0"
futures = "0.3"
paste = "1.0.15"
poise = "0.6.1"
pretty_assertions = "1.4.1"
rand = "0.9.0"
reqwest = "0.12.4"
serde-xml-rs = "0.6.0"
serde_json = "1.0.0"
thiserror = "2.0.11"
tracing = "0.1.40"

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
unwrap_used = "deny"
style = "deny"
complexity = "deny"
perf = "deny"
suspicious = "deny"

[profile.dev]
incremental = true                           # Compile your binary in smaller steps.
rustflags = ["-Zthreads=8"]                  # Better compile performance.

[profile.release]
codegen-units = 1                            # Allows LLVM to perform better optimization.
lto = true                                   # Enables link-time-optimizations.
opt-level = "s"                              # Prioritizes small binary size.
panic = "abort"                              # Higher performance by disabling panic handlers.
strip = true                                 # Ensures debug symbols are removed.
trim-paths = "all"                           # Removes potentially privileged information from the binaries.
rustflags = ["-Cdebuginfo=0", "-Zthreads=8"] # Better compile performance.
