[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
database.workspace = true
common.workspace = true

anyhow.workspace = true
chrono.workspace = true
fancy-regex.workspace = true
futures.workspace = true
lazy_static.workspace = true
itertools.workspace = true
log.workspace = true
tracing.workspace = true
poise.workspace = true
rand.workspace = true
reqwest.workspace = true
serde-xml-rs.workspace = true
serde.workspace = true
serde_json.workspace = true
smallvec.workspace = true
serenity.workspace = true
thiserror.workspace = true
tokio.workspace = true

[dev-dependencies]
pretty_assertions.workspace = true
dotenv.workspace = true

[lints]
workspace = true
