[package]
name = "bot"
edition = "2021"
version.workspace = true

[dependencies]
backend.workspace = true
common.workspace = true
database.workspace = true

dotenv.workspace = true
env_logger.workspace = true
log.workspace = true
once_cell.workspace = true
poise.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
