[package]
name = "database"
version = "0.1.0"
edition = "2021"

[dependencies]
deadpool-postgres.workspace = true
lazy_static.workspace = true
log.workspace = true
once_cell.workspace = true
refinery.workspace = true
thiserror.workspace = true
tokio-postgres.workspace = true
tokio.workspace = true

[lints]
workspace = true
