[package]
name = "database"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow.workspace = true
diesel.workspace = true
diesel-async.workspace = true
diesel_migrations.workspace = true
futures.workspace = true
tracing.workspace = true
tokio.workspace = true
smallvec.workspace = true
serde.workspace = true

[dev-dependencies]
pretty_assertions = "1.4.1"
serde_json.workspace = true

[lints]
workspace = true
