[package]
name = "midnight-api"
edition = "2024"
version.workspace = true

[dependencies]
midnight-util.workspace = true
midnight-model.workspace = true

anyhow.workspace = true
fancy-regex.workspace = true
futures.workspace = true
serde.workspace = true
serde_json.workspace = true
serde-xml-rs.workspace = true
smallvec.workspace = true
reqwest.workspace = true
rand.workspace = true
tokio.workspace = true
tracing.workspace = true

[dev-dependencies]
dotenvy.workspace = true

[lints]
workspace = true
