[package]
name = "midnight"
edition = "2024"
version.workspace = true

[dependencies]
midnight-api.workspace = true
midnight-database.workspace = true
midnight-model.workspace = true
midnight-util.workspace = true

anyhow.workspace = true
dotenvy.workspace = true
log.workspace = true
once_cell.workspace = true
paste.workspace = true
poise.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
lazy_static.workspace = true
sysinfo.workspace = true
smallvec.workspace = true

fancy-regex.workspace = true
futures.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
serenity.workspace = true
thiserror.workspace = true

[dev-dependencies]
pretty_assertions.workspace = true

[lints]
workspace = true
